<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.smartpro.smartcer.Control.ResizableImageView
                android:id="@+id/action_screen_tests"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/action_icon_margin"
                android:src="@drawable/action_inactive_screen"/>
            <com.smartpro.smartcer.Control.ResizableImageView
                android:id="@+id/action_reader_tests"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/action_icon_margin"
                android:src="@drawable/action_active_reader"/>
            <com.smartpro.smartcer.Control.ResizableImageView
                android:id="@+id/action_gemstone_tests"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/action_icon_margin"
                android:src="@drawable/action_inactive_gemeye"/>
            <com.smartpro.smartcer.Control.ResizableImageView
                android:id="@+id/action_gague_tests"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/action_icon_margin"
                android:src="@drawable/action_inactive_gauge"/>
            <com.smartpro.smartcer.Control.ResizableImageView
                android:id="@+id/action_scale_tests"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/action_icon_margin"
                android:src="@drawable/action_inactive_scale"/>
            <com.smartpro.smartcer.Control.ResizableImageView
                android:id="@+id/action_certification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/action_icon_margin"
                android:src="@drawable/action_inactive_cer"/>
        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:layout_above="@id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.smartpro.smartcer.Control.ResizableImageView
                android:id="@+id/smartpro"
                android:src="@drawable/smartpro"
                android:layout_width="@dimen/smartpro_header_width"
                android:layout_height="@dimen/smartpro_header_height"
                android:layout_marginTop="@dimen/fab_margin_0"
                android:layout_marginBottom="@dimen/fab_margin_0"
                android:layout_marginLeft="@dimen/fab_margin_2"
                android:layout_marginRight="@dimen/fab_margin_2"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/linear_section_height"
                android:orientation="horizontal"
                android:background="@drawable/linearlayout_gradient_background_section">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/fab_margin_0"
                android:paddingLeft="@dimen/fab_margin_0"
                android:paddingRight="@dimen/fab_margin_0">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.smartpro.smartcer.Control.ResizableImageView
                        android:id="@+id/diamond_icon"
                        android:layout_width="@dimen/test_icon_width"
                        android:layout_height="@dimen/test_icon_width"
                        android:scaleType="fitXY"
                        android:src="@drawable/tab_icon_reader"
                        android:padding="0dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin_0">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/diamond_tests"
                            android:textColor="@color/colorTextColor"
                            android:gravity="center|left" />
                        <TextView
                            android:id="@+id/diamond_connected_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_connected_status"
                            android:textColor="@color/colorTextColor"
                            android:gravity="center|left" />

                        <LinearLayout
                            android:id="@+id/diamond_bluetooth_panel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:clickable="true"
                            android:background="@drawable/linearlayout_pressable">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <com.smartpro.smartcer.Control.ResizableImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/bluetooth_icon"
                                    android:paddingTop="4dp" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/fab_margin_0">
                                <TextView
                                    android:id="@+id/diamond_press_to_connect"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/diamond_bt_press_to_connect"
                                    android:textColor="@color/colorTextColor"
                                    android:gravity="center|left" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/diamond_bluetooth_message_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >
                <TextView
                    android:id="@+id/diamond_bluetooth_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="BT Msg: -"
                    android:gravity="center|left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/linear_section_height"
                android:orientation="horizontal"
                android:background="@drawable/linearlayout_gradient_background_section">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="4dp">

                    <com.smartpro.smartcer.Control.ResizableImageView
                        android:id="@+id/diamond_battery_icon"
                        android:src="@drawable/battery_status_5"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="@dimen/fab_margin_0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="@dimen/fab_margin_0"
                    android:paddingRight="@dimen/fab_margin_0">
                    <com.smartpro.smartcer.Control.ResizableImageView
                        android:id="@+id/diamond_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/reader_idle" />
                </LinearLayout>
            </LinearLayout>


        <LinearLayout
            android:id="@+id/diamond_result_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/fab_margin_0"
            android:visibility="gone">

            <TextView
                android:id="@+id/screen_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stable_result"
                android:textColor="@color/colorTextColor"
                android:gravity="center|left" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin_0"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/fab_margin_0">
                    <TextView
                        android:id="@+id/test_results_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diamond_test_result1_blank"
                        android:textColor="@color/colorTextColor"
                        android:background="@drawable/textview_rounded_corner_result"
                        android:layout_marginTop="@dimen/fab_margin_0"
                        android:gravity="center|left" />
                    <TextView
                        android:id="@+id/test_results_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diamond_test_result2_blank"
                        android:textColor="@color/colorTextColor"
                        android:background="@drawable/textview_rounded_corner_result"
                        android:layout_marginTop="@dimen/fab_margin_0"
                        android:gravity="center|left" />
                    <TextView
                        android:id="@+id/test_results_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diamond_test_result3_blank"
                        android:textColor="@color/colorTextColor"
                        android:background="@drawable/textview_rounded_corner_result"
                        android:layout_marginTop="@dimen/fab_margin_0"
                        android:gravity="center|left" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/fab_margin_0">

                    <TextView
                        android:id="@+id/test_results_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diamond_test_result4_blank"
                        android:textColor="@color/colorTextColor"
                        android:background="@drawable/textview_rounded_corner_result"
                        android:layout_marginTop="@dimen/fab_margin_0"
                        android:gravity="center|left" />
                    <TextView
                        android:id="@+id/test_results_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diamond_test_result5_blank"
                        android:textColor="@color/colorTextColor"
                        android:background="@drawable/textview_rounded_corner_result"
                        android:layout_marginTop="@dimen/fab_margin_0"
                        android:gravity="center|left" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>







            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/fab_margin_0"
                android:layout_marginRight="@dimen/fab_margin_0"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin_0"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/btn_diamond_connect"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_connect"
                    android:background="@drawable/button_selector_pressable"
                    android:textColor="@color/colorTextColor"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/fab_margin_0"/>
                <Button
                    android:id="@+id/btnOK"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_add_to_cer"
                    android:background="@drawable/button_selector_disable"
                    android:textColor="@color/colorTextColor"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/fab_margin_0"/>
                <Button
                    android:id="@+id/btnNewTest"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_new_tests"
                    android:background="@drawable/button_selector_disable"
                    android:textColor="@color/colorTextColor"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>